--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h1 {
 .container {
   position: relative;
   width: 720px;
-  height: 900px;
+  height: 1500px;
   background: #f5f5f5;
   margin: 10px auto;
 }
@@ -66,7 +66,7 @@ h1 {
   right: 20px;
   left: 20px;
   width: 680px;
-  height: 700px;
+  height: 1300px;
   margin: auto;
 }
 
@@ -146,4 +146,97 @@ header div {
   background: var(--primary-color);
   padding: 5px;
   border-radius: 10px;
+}
+
+/*seccion de galletas Muu, esta vez definiremos todo nuevamente pero claramente hay algunas cosas que se podian reutilizar*/
+
+#cookie {
+  margin: -100px auto auto auto;
+  /* margin-top: 0px; */
+  padding: 10px;
+  width: 600px;
+  height: 210px;
+}
+
+#cookie img {
+  width: 45%;
+  height: 210px;
+  float: right;
+  /* border-radius: 20%; */
+}
+
+#cookie div {
+  float: left;
+  padding-left: 15px;
+  width: 50%;
+}
+
+#cookie h5 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+#cookie p {
+  text-align: justify;
+}
+
+/*Seccion de familia de productos*/
+#family #titles {
+  margin-top: 20px;
+}
+#family h1 {
+  color: var(--secondary-color);
+}
+
+#family span {
+  display: block;
+  font-size: 3rem;
+  font-weight: bold;
+  color: var(--secondary-color);
+}
+
+#products {
+  margin: 0px auto auto auto;
+  /* margin-top: 0px; */
+  padding: 10px;
+  width: 600px;
+  height: 300px;
+}
+
+#products .product {
+  width: 30%;
+  height: 280px;
+  padding: 1px;
+  float: left;
+  margin-left: 15px;
+  text-align: center;
+}
+
+#products img {
+  width: 100%;
+  height: 150px;
+
+  /* border-radius: 20%; */
+}
+
+#family a {
+  padding: 20px;
+  margin: 0px 240px;
+}
+
+/*SECCION DEL FOOTER*/
+footer {
+  padding: 10px;
+  width: 90%;
+  margin-top: 10px;
+  margin-left: 20px;
+  /* background-color: var(--secondary-color); */
+  text-align: center;
+}
+
+footer a {
+  color: white;
+  font-size: 3rem;
+  text-decoration: none;
 }
