--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* usamos unas variables de css, para probar mas facil los cambios en colores, y tener mas organizado el codigo  */
 :root {
   --primary-color: #25b4e5;
   --secondary-color: #303f9f;
@@ -5,7 +6,9 @@
 }
 
 /*damos el formato al cuerpo , el texto tendra por defecto el color gris usado por la empresa y la fuente
-sera Lato, para los encabezadosTtitulos se usara Monstserrat*/
+sera Lato, para los encabezadosTtitulos se usara Monstserrat
+LOS COLORES Y FUENTES USADAS SON USADOS POR COLOMBINA EN SU PAGINA OFICIAL
+*/
 body {
   color: var(--gray-color);
   font-family: "Lato", sans-serif;
@@ -38,6 +41,7 @@ h1 {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+/* creamos el contenedor principal centrado en la pantalla horizontalmente y con el ancho de 720px tipico de los newsletters ademas de otras caracteristicas de apariencia y la posicion relativa para luego posicionar la imagen de fondo que tendra posiionamiento absoluto */
 .container {
   position: relative;
   width: 720px;
@@ -45,7 +49,7 @@ h1 {
   background: #f5f5f5;
   margin: 10px auto;
 }
-
+/* imagen de fondo al inicio del newsletter */
 #back-image {
   background: url("img/background2.jpg") no-repeat center center/cover;
   position: absolute;
@@ -84,7 +88,6 @@ h1 {
 
 #logo {
   width: 120px;
-  /* float: right; */
   margin-right: 20px;
   margin-top: 20px;
 }
@@ -99,7 +102,7 @@ header div {
   width: 70%;
   margin-left: 40px;
 }
-
+/* lineas separadoras usando divs con fondo y altura de 1px */
 .line {
   height: 1px;
   width: 80%;
@@ -124,7 +127,7 @@ header div {
   width: 600px;
   height: 210px;
 }
-
+/* tanto la imagen y el div que conponen la seccion tenran un float con el fin de acomodar todos en la misma fila */
 #bon-bon img {
   margin-top: 20px;
   width: 270px;
@@ -148,7 +151,7 @@ header div {
 #bon-bon p {
   text-align: justify;
 }
-
+/* clase para dar caracteristicas a un link y hacerlo parecer un boton */
 .btn {
   display: inline-block;
   margin: 5px 90px;
@@ -159,8 +162,7 @@ header div {
   border-radius: 10px;
 }
 
-/*seccion de galletas Muu, esta vez definiremos todo nuevamente pero claramente hay algunas cosas que se podian reutilizar*/
-
+/*seccion de galletas Muu, esta vez definiremos todo nuevamente pero claramente hay algunas cosas que se podian reutilizar es muy similar a la seccion anterior*/
 #cookie {
   margin: -100px auto auto auto;
   /* margin-top: 0px; */
@@ -194,13 +196,15 @@ header div {
 }
 
 /*Seccion de familia de productos*/
+/* algo de margen para el titulo */
 #family #titles {
   margin-top: 20px;
 }
+/* color del titulo */
 #family h1 {
   color: var(--secondary-color);
 }
-
+/* enfasis que se le dara para resaltar una parte del texto, un mayor tamaño y en negrilla */
 #family span {
   display: block;
   font-size: 3rem;
@@ -208,6 +212,7 @@ header div {
   color: var(--secondary-color);
 }
 
+/* los productos con su ancho y altura predeterminada */
 #products {
   margin: 0px auto auto auto;
   /* margin-top: 0px; */
@@ -216,6 +221,7 @@ header div {
   height: 300px;
 }
 
+/*  luego la clase producto que le dara un ancho de manera que cada producto quepa en la misma fila y se le hace el float left para que esten juntas */
 #products .product {
   width: 30%;
   height: 280px;
@@ -253,7 +259,7 @@ footer a {
   text-decoration: none;
 }
 
-/* MODIFICACIONES----------- */
+/*  poner el logo al inicio del newsletter para demostrar  la compañia y fue recomendado al ser lo primero que se ve al abrir el newsletter*/
 #logo {
   position: absolute;
   top: 10px;
